updated landing page

--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html> 
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>Psalm Full of Soul</title>
-    <link href='css/pfos.min.css' rel='stylesheet' type='text/css'>
+    <link href='css/home.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="menu-bar">
@@ -46,7 +46,7 @@
       <img class="group-photo" src="images/pfos-group-photo.png"/>
       <div class="pfos-story-container">
         <div class="story">
-          <p>Journey through new sounds in jazz, gospel, classical and funk with <b>Psalm Full of Soul</b> and guest artists.</p>
+          <p id="psalm-story">Journey through new sounds in jazz, gospel, classical and funk with <b>Psalm Full of Soul</b> and guest artists.</p>
           <p>Within a diversity of cultures and traditions lies our global soul.</p>
         </div>
         <div class="buttons">
@@ -64,33 +64,33 @@
     <div class="guest-artist-container">
       <h4 class="guest-header">Guests performances by</h4>
       <div class="guest-artist-l">
-        <img class="guest-artist-image" src="images/pfos-bboa.png">
+        <img class="guest-artist-image" src="images/pfos-bboa.jpg">
         <div class="guest-artist-name">
           <img class="playbutton" src="images/playbutton.png">
           <p>The Blind Boys of Alabama</p>
         </div>
       </div>
       <div class="guest-artist-ml">
-        <img class="guest-artist-image" src="images/pfos-greg-boyer.png">
+        <img class="guest-artist-image" src="images/pfos-greg.jpg">
         <div class="guest-artist-name">
           <img class="playbutton" src="images/playbutton.png">
           <p>Greg Boyer</p>
         </div>
       </div>
       <div class="guest-artist-mr">
-        <img class="guest-artist-image" src="images/pfos-natasha.png">
+        <img class="guest-artist-image" src="images/pfos-natasha.jpg">
         <div class="guest-artist-name">
-          <p>Natasha Hirshorn</p>
+          <p>Natasha Hirshhorn</p>
         </div>
       </div>
       <div class="guest-artist-ml">
-        <img class="guest-artist-image" src="images/pfos-lena.png">
+        <img class="guest-artist-image" src="images/pfos-lena.jpg">
         <div class="guest-artist-name">
           <p>Lena Seikaly</p>
         </div>
       </div>
       <div class="guest-artist-mr">
-        <img class="guest-artist-image" src="images/pfos-ramon.png">
+        <img class="guest-artist-image" src="images/pfos-ramon.jpg">
         <div class="guest-artist-name">
           <img class="playbutton" src="images/playbutton.png">
           <p>Ramón Tasat</p>
