--- a/home.html
+++ b/home.html
@@ -41,12 +41,12 @@
     <div class="title">
       <img src="images/pfos-title.png"/>
     </div>
-    <img class="group-bg" src="images/pfos-group-bg.png"/>
+    <img class="group-bg" src="images/home/bg-image.png"/>
     <div class="pfos-info">
-      <img class="group-photo" src="images/pfos-group-photo.png"/>
+      <img class="group-photo" src="images/home/group-photo.png"/>
       <div class="pfos-story-container">
         <div class="story">
-          <p id="psalm-story">Journey through new sounds in jazz, gospel, classical and funk with <b>Psalm Full of Soul</b> and guest artists.</p>
+          <p id="psalm-story">Journey through new sounds in jazz, gospel, classical and funk with <i><b>Psalm Full of Soul</b></i> and guest artists.</p>
           <p>Within a diversity of cultures and traditions lies our global soul.</p>
         </div>
         <div class="buttons">
@@ -64,33 +64,33 @@
     <div class="guest-artist-container">
       <h4 class="guest-header">Guests performances by</h4>
       <div class="guest-artist-l">
-        <img class="guest-artist-image" src="images/pfos-bboa.jpg">
+        <img class="guest-artist-image" src="images/home/bboa.jpg">
         <div class="guest-artist-name">
           <img class="playbutton" src="images/playbutton.png">
           <p>The Blind Boys of Alabama</p>
         </div>
       </div>
       <div class="guest-artist-ml">
-        <img class="guest-artist-image" src="images/pfos-greg.jpg">
+        <img class="guest-artist-image" src="images/home/greg.jpg">
         <div class="guest-artist-name">
           <img class="playbutton" src="images/playbutton.png">
           <p>Greg Boyer</p>
         </div>
       </div>
       <div class="guest-artist-mr">
-        <img class="guest-artist-image" src="images/pfos-natasha.jpg">
+        <img class="guest-artist-image" src="images/home/natasha.jpg">
         <div class="guest-artist-name">
           <p>Natasha Hirshhorn</p>
         </div>
       </div>
       <div class="guest-artist-ml">
-        <img class="guest-artist-image" src="images/pfos-lena.jpg">
+        <img class="guest-artist-image" src="images/home/lena.jpg">
         <div class="guest-artist-name">
           <p>Lena Seikaly</p>
         </div>
       </div>
       <div class="guest-artist-mr">
-        <img class="guest-artist-image" src="images/pfos-ramon.jpg">
+        <img class="guest-artist-image" src="images/home/ramon.jpg">
         <div class="guest-artist-name">
           <img class="playbutton" src="images/playbutton.png">
           <p>Ramón Tasat</p>
