--- a/landingpage.html
+++ b/landingpage.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <img id="background" src="images/landing-page.jpg"/>
+      <img id="background" src="images/landing/bg-image.jpg"/>
       <a href="home.html" class="button">
         <p>ENTER SITE</p>
       </a>
