updated home page and fixed branding text

--- a/home.html
+++ b/home.html
@@ -46,17 +46,18 @@
       <img class="group-photo" src="images/home/group-photo.png"/>
       <div class="pfos-story-container">
         <div class="story">
-          <p id="psalm-story">Journey through new sounds in jazz, gospel, classical and funk with <i><b>Psalm Full of Soul</b></i> and guest artists.</p>
-          <p>Within a diversity of cultures and traditions lies our global soul.</p>
+          <img src="images/home/brandingtext.png"/>
         </div>
         <div class="buttons">
           <div class="pfos-button left">
-            <div class="play-icon"></div>
-            <p>THE MUSIC</p>
+            <img src="images/home/music-btn.png"/>
+            <!--<div class="play-icon"></div>
+            <p>THE MUSIC</p>-->
           </div>
           <div class="pfos-button right">
-            <div class="play-icon"></div>
-            <p>BEHIND THE SCENES</p>
+            <img src="images/home/behind-btn.png"/>
+            <!--<div class="play-icon"></div>
+            <p>BEHIND THE SCENES</p>-->
           </div>
         </div>
       </div>
@@ -80,7 +81,7 @@
       <div class="guest-artist-mr">
         <img class="guest-artist-image" src="images/home/natasha.jpg">
         <div class="guest-artist-name">
-          <p>Natasha Hirshhorn</p>
+          <p>Natasha Hirschhorn</p>
         </div>
       </div>
       <div class="guest-artist-ml">
