new updates to home

--- a/bboa.html
+++ b/bboa.html
@@ -15,6 +15,13 @@
           <li>HOME</li>
           <li>ABOUT</li>
           <li>GUEST ARTISTS</li>
+            <ul class="mobile-guest-artist-nav">
+                <li>Ramón Tasat</li>
+                <li>Lena Seikaly</li>
+                <li>Greg Boyer</li>
+                <li>Natasha Hirschhorn</li>
+                <li>The Blind Boys of Alabama</li>
+            </ul>
           <li>MUSIC</li>
           <li>CONTACT</li>
         </ul>
@@ -22,7 +29,17 @@
       <ul class="web-nav">
         <li>HOME</li>
         <li>ABOUT</li>
-        <li>GUEST ARTISTS</li>
+        <li>
+          <label class="web-nav-ga" for="guest-artist-toggle">GUEST ARTISTS</label>
+          <input type="checkbox" id="guest-artist-toggle"/>
+          <ul class="web-guest-artist-nav">
+              <li>Ramón Tasat</li>
+              <li>Lena Seikaly</li>
+              <li>Greg Boyer</li>
+              <li>Natasha Hirschhorn</li>
+              <li>The Blind Boys of Alabama</li>
+          </ul>
+        </li>
         <li>MUSIC</li>
         <li>CONTACT</li>
       </ul>
