final updates for launch

--- a/bboa.html
+++ b/bboa.html
@@ -12,45 +12,45 @@
         <label class="menu-ham" for="menu-toggle">MENU</label>
         <input type="checkbox" id="menu-toggle"/>
         <ul class="mobile-menu">
-          <li>HOME</li>
-          <li>ABOUT</li>
+          <li><a href="home.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
           <li>GUEST ARTISTS</li>
             <ul class="mobile-guest-artist-nav">
-                <li>Ramón Tasat</li>
-                <li>Lena Seikaly</li>
-                <li>Greg Boyer</li>
-                <li>Natasha Hirschhorn</li>
-                <li>The Blind Boys of Alabama</li>
+              <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+              <li><a href="gregboyer.html">Greg Boyer</a></li>
+              <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+              <li><a href="lena.html">Lena Seikaly</a></li>
+              <li><a href="ramon.html">Ramón Tasat</a></li>
             </ul>
-          <li>MUSIC</li>
-          <li>CONTACT</li>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <ul class="web-nav">
-        <li>HOME</li>
-        <li>ABOUT</li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
         <li>
           <label class="web-nav-ga" for="guest-artist-toggle">GUEST ARTISTS</label>
           <input type="checkbox" id="guest-artist-toggle"/>
           <ul class="web-guest-artist-nav">
-              <li>Ramón Tasat</li>
-              <li>Lena Seikaly</li>
-              <li>Greg Boyer</li>
-              <li>Natasha Hirschhorn</li>
-              <li>The Blind Boys of Alabama</li>
+            <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+            <li><a href="gregboyer.html">Greg Boyer</a></li>
+            <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+            <li><a href="lena.html">Lena Seikaly</a></li>
+            <li><a href="ramon.html">Ramón Tasat</a></li>
           </ul>
         </li>
-        <li>MUSIC</li>
-        <li>CONTACT</li>
+        <li><a href="music.html">MUSIC</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="icon-bar">
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.facebook.com/PsalmFullOfSoul">
           <img src="images/pfos-facebook.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.youtube.com/channel/UCwpePpuyrd6SdrKXTByOu9w">
           <img src="images/pfos-youtube.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://twitter.com/PsalmFullOfSoul">
           <img src="images/pfos-twitter.png"/>
         </a>
       </div>
@@ -61,37 +61,81 @@
     <div class="page-title">
       <h2>GUEST ARTISTS</h2>
     </div>
+    <div class="ga-banner">
+      <img src="images/guestartists/bboaheader.jpg"/>
+    </div>
     <div class="ga-container">
-      <div class="ga-panel">
-        <div class="ga-image">
-          <img class="ga-img-large" src="images/guestartists/bboa.jpg"/>
-        </div>
-        <div class="ga-desc-container">
+      <div class="ga-info-panel">
+        <div class="ga-desc-container ga-desc-full">
           <h5 class="ga-name">
             THE BLIND BOYS OF ALABAMA
           </h5>
           <p class="ga-description">
-            The versatility of The Blind Boys of Alabama knows no bounds. From blues to folk, soul, country and gospel, they inspire audiences throughout the world. This group has attained the highest levels of achievement in a career that spans over 60 years; five Grammy Awards, Lifetime Achievement Awards from The National Endowment for the Arts and the National Academy of Recording Arts and Sciences (NARAS), and an induction into the Gospel Music Hall of Fame. The Blind Boys of Alabama join Vanessa R. Williams on Psalm Full of Soul's "Eternal Light," a celebration of God's holy light.
+            The versatility of The Blind Boys of Alabama knows no bounds. From blues to folk, soul, country and gospel, they inspire audiences throughout the world. This group has attained the highest levels of achievement in a career that spans over 60 years: five Grammy Awards, Lifetime Achievement Awards from The National Endowment for the Arts and the National Academy of Recording Arts and Sciences (NARAS), and an induction into the Gospel Music Hall of Fame. The Blind Boys of Alabama join Vanessa R. Williams on <i>Psalm Full of Soul</i>'s "Eternal Light," a celebration of God's holy light.
           </p>
           <p class="ga-desc-link"><a href="http://www.blindboys.com" target="_blank">www.blindboys.com</a></p>
         </div>
-        <div class="ga-sample">
-          <div class="ga-sample-image">
-              <img src="images/BBVideoPlayButton.jpg"/>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+          <div class="ga-sample-video-container">
+            <iframe src="https://www.youtube.com/embed/EO3Z9WKLkLI?rel=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="ga-sample-description">
-            <p><b>VIEW VIDEO CLIP: "Eternal Light"</b> (CD track 3) <br>
-            <i><b>Source:</b></i> Genesis 1:3-5, Isaiah (30:26, 45:7), and 5th century poem <i>Or'Olam</i> by Yose ben Yose<br>
-            <i><b>Composer:</b></i> Norma Brooks<br>
-            <i><b>Producer, Engineer, Arranger:</b></i> Vince Evans<br>
-            <i><b>Guest Artists:</b></i> The Blind Boys of Alabama (Jimmy Carter, Ben Moore, Joey Williams, Paul Beasley)<br>
-            <i><b>Vocal Soloist:</b></i> Vanessa R. Williams<br>
-            <i><b>Choir:</b></i> Rhonda Burnett Chapman, Byron Nichols, Michael White, Vanessa R. Williams<br>
-            <i><b>Keyboards:</b></i> Vince Evans <br>
-            <i><b>Guitar:</b></i> Alvin White<br>
-            <i><b>Bass:</b></i> Bryan Fox <br>
-            <i><b>Drums:</b></i> J.C. Jefferson</p>
+          <p class="ga-sample-img-title"><b>VIEW VIDEO CLIP:<br>"Eternal Light"</b><br>(CD track 3)</p>
+        </div>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title"><b>Eternal Light</b> (CD track 3)</div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">Genesis 1:3-5, Isaiah 30:26, 45:7,
+              <br><i>Or 'Olam</i> by Yose ben Yose
+            </div>
           </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composer:</b></div>
+            <div class="ga-credit-list">Norma Brooks</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Producer, Arranger:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Guest Artists:</b></div>
+            <div class="ga-credit-list">The Blind Boys of Alabama<br>(Paul Beasley, Jimmy Carter,<br>Ben Moore & Joey Williams)</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloist:</b></div>
+            <div class="ga-credit-list">Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Choir:</b></div>
+            <div class="ga-credit-list">Rhonda Burnett Chapman,<br>Byron Nichols, Michael White,<br>Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Keyboard:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Guitar:</b></div>
+            <div class="ga-credit-list">Alvin White</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Bass:</b></div>
+            <div class="ga-credit-list">Bryan Fox</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Drums:</b></div>
+            <div class="ga-credit-list">J.C. Jefferson</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Recording Engineer:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <div class="purchase">(Full song available for purchase at <a href="Music.html">Music</a>)</div>
         </div>
       </div>
     </div>
