--- a/home.html
+++ b/home.html
@@ -12,45 +12,45 @@
         <label class="menu-ham" for="menu-toggle">MENU</label>
         <input type="checkbox" id="menu-toggle"/>
         <ul class="mobile-menu">
-          <li>HOME</li>
-          <li>ABOUT</li>
+          <li><a href="home.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
           <li>GUEST ARTISTS</li>
             <ul class="mobile-guest-artist-nav">
-                <li>Ramón Tasat</li>
-                <li>Lena Seikaly</li>
-                <li>Greg Boyer</li>
-                <li>Natasha Hirschhorn</li>
-                <li>The Blind Boys of Alabama</li>
+              <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+              <li><a href="gregboyer.html">Greg Boyer</a></li>
+              <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+              <li><a href="lena.html">Lena Seikaly</a></li>
+              <li><a href="ramon.html">Ramón Tasat</a></li>
             </ul>
-          <li>MUSIC</li>
-          <li>CONTACT</li>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <ul class="web-nav">
-        <li>HOME</li>
-        <li>ABOUT</li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
         <li>
           <label class="web-nav-ga" for="guest-artist-toggle">GUEST ARTISTS</label>
           <input type="checkbox" id="guest-artist-toggle"/>
           <ul class="web-guest-artist-nav">
-              <li>Ramón Tasat</li>
-              <li>Lena Seikaly</li>
-              <li>Greg Boyer</li>
-              <li>Natasha Hirschhorn</li>
-              <li>The Blind Boys of Alabama</li>
+            <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+            <li><a href="gregboyer.html">Greg Boyer</a></li>
+            <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+            <li><a href="lena.html">Lena Seikaly</a></li>
+            <li><a href="ramon.html">Ramón Tasat</a></li>
           </ul>
         </li>
-        <li>MUSIC</li>
-        <li>CONTACT</li>
+        <li><a href="music.html">MUSIC</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="icon-bar">
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.facebook.com/PsalmFullOfSoul">
           <img src="images/pfos-facebook.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.youtube.com/channel/UCwpePpuyrd6SdrKXTByOu9w">
           <img src="images/pfos-youtube.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://twitter.com/PsalmFullOfSoul">
           <img src="images/pfos-twitter.png"/>
         </a>
       </div>
@@ -68,10 +68,14 @@
           </div>
           <div class="buttons">
             <div class="pfos-button left">
-              <img src="images/home/music-btn.png"/>
+              <a href="music.html">
+                <img src="images/home/music-btn.png"/>
+              </a>
             </div>
             <div class="pfos-button right">
-              <img src="images/home/behind-btn.png"/>
+              <a href="about.html">
+                <img src="images/home/behind-btn.png"/>
+              </a>
             </div>
           </div>
         </div>
@@ -79,43 +83,53 @@
       <div class="guest-artist-container">
         <h4 class="guest-header">Guest performances by</h4>
         <div class="guest-artist-l">
-          <img class="guest-artist-image" src="images/home/bboa.jpg">
-          <div class="guest-artist-name">
-            <p>
-              <img class="playbutton" src="images/playbutton.png">
-              The Blind Boys of Alabama
-            </p>
-          </div>
+          <a href="bboa.html">
+            <img class="guest-artist-image" src="images/home/bboa.jpg">
+            <div class="guest-artist-name">
+              <p>
+                <img class="playbutton" src="images/playbutton.png">
+                The Blind Boys of Alabama
+              </p>
+            </div>
+          </a>
         </div>
         <div class="guest-artist-ml">
-          <img class="guest-artist-image" src="images/home/greg.jpg">
-          <div class="guest-artist-name">
-            <p>
-              <img class="playbutton" src="images/playbutton.png">
-              Greg Boyer
-            </p>
-          </div>
+          <a href="gregboyer.html">
+            <img class="guest-artist-image" src="images/home/greg.jpg">
+            <div class="guest-artist-name">
+              <p>
+                <img class="playbutton" src="images/playbutton.png">
+                Greg Boyer
+              </p>
+            </div>
+          </a>
         </div>
         <div class="guest-artist-mr">
-          <img class="guest-artist-image" src="images/home/natasha.jpg">
-          <div class="guest-artist-name">
-            <p>Cantor Hirschhorn</p>
-          </div>
+          <a href="natasha.html">
+            <img class="guest-artist-image" src="images/home/natasha.jpg">
+            <div class="guest-artist-name">
+                <p>Cantor Hirschhorn</p>
+            </div>
+          </a>
         </div>
         <div class="guest-artist-ml">
-          <img class="guest-artist-image" src="images/home/lena.jpg">
-          <div class="guest-artist-name">
-            <p>Lena Seikaly</p>
-          </div>
+          <a href="lena.html">
+            <img class="guest-artist-image" src="images/home/lena.jpg">
+            <div class="guest-artist-name">
+                <p>Lena Seikaly</p>
+            </div>
+          </a>
         </div>
         <div class="guest-artist-mr">
-          <img class="guest-artist-image" src="images/home/ramon.jpg">
-          <div class="guest-artist-name">
-            <p>
-              <img class="playbutton" src="images/playbutton.png">
-              Cantor Tasat
-            </p>
-          </div>
+          <a href="ramon.html">
+            <img class="guest-artist-image" src="images/home/ramon.jpg">
+            <div class="guest-artist-name">
+                <p>
+                  <img class="playbutton" src="images/playbutton.png">
+                  Cantor Tasat
+                </p>
+            </div>
+          </a>
         </div>
       </div>
     </div>
