--- a/natasha.html
+++ b/natasha.html
@@ -12,28 +12,45 @@
         <label class="menu-ham" for="menu-toggle">MENU</label>
         <input type="checkbox" id="menu-toggle"/>
         <ul class="mobile-menu">
-          <li>HOME</li>
-          <li>ABOUT</li>
+          <li><a href="home.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
           <li>GUEST ARTISTS</li>
-          <li>MUSIC</li>
-          <li>CONTACT</li>
+            <ul class="mobile-guest-artist-nav">
+              <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+              <li><a href="gregboyer.html">Greg Boyer</a></li>
+              <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+              <li><a href="lena.html">Lena Seikaly</a></li>
+              <li><a href="ramon.html">Ramón Tasat</a></li>
+            </ul>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <ul class="web-nav">
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>GUEST ARTISTS</li>
-        <li>MUSIC</li>
-        <li>CONTACT</li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li>
+          <label class="web-nav-ga" for="guest-artist-toggle">GUEST ARTISTS</label>
+          <input type="checkbox" id="guest-artist-toggle"/>
+          <ul class="web-guest-artist-nav">
+            <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+            <li><a href="gregboyer.html">Greg Boyer</a></li>
+            <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+            <li><a href="lena.html">Lena Seikaly</a></li>
+            <li><a href="ramon.html">Ramón Tasat</a></li>
+          </ul>
+        </li>
+        <li><a href="music.html">MUSIC</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="icon-bar">
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.facebook.com/PsalmFullOfSoul">
           <img src="images/pfos-facebook.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.youtube.com/channel/UCwpePpuyrd6SdrKXTByOu9w">
           <img src="images/pfos-youtube.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://twitter.com/PsalmFullOfSoul">
           <img src="images/pfos-twitter.png"/>
         </a>
       </div>
@@ -45,32 +62,118 @@
       <h2>GUEST ARTISTS</h2>
     </div>
     <div class="ga-container">
-      <div class="ga-panel">
+      <div class="ga-info-panel">
         <div class="ga-image">
-          <img class="ga-img-small" src="images/guestartists/natasha.jpg"/>
+          <img class="ga-img-full" src="images/guestartists/natasha.jpg"/>
         </div>
         <div class="ga-desc-container">
           <h5 class="ga-name">
             CANTOR NATASHA J. HIRSCHHORN
           </h5>
           <p class="ga-description">
-            Cantor Natasha J. Hirschhorn is an accomplished singer, pianist and composer, whose music has been featured at Lincoln Center in New York, at Jewish music festivals, and in congregations across North America. She is Music Director of Congregation Ansche Chesed in New York City, a vice president of Shalshelet (shalshelet.org), and is on the faculties of the Jewish Theological Seminary and of Hebrew Union College. A native of Ukraine, Natasha received her training at Moscow Gnesins' Musical College and the Kiev State Conservatory. On Psalm Full of Soul's musical setting for Kadia Molodowsky's poem, Natasha’s expressive voice and sensitive piano rendition recreate the warmth and timeless beauty of the Sabbath.
+            Cantor Natasha J. Hirschhorn is an accomplished singer, pianist and composer, whose music has been featured at Lincoln Center in New York, at Jewish music festivals, and in congregations across North America. She is Music Director of Congregation Ansche Chesed in New York City, a vice president of <a href="http://shalshelet.org/">Shalshelet</a>, and is on the faculty of the Jewish Theological Seminary and of Hebrew Union College. A native of Ukraine, Natasha received her training at Moscow Gnesins' Musical College and the Kiev State Conservatory. On <i>Psalm Full of Soul</i>'s musical setting for Kadia Molodowsky's poem, Natasha’s expressive voice and sensitive piano rendition recreate the warmth and timeless beauty of the Sabbath.
           </p>
-          <p class="ga-desc-link"><a href="http://www.cantornatasha.com/" target="_blank">www.cantornatasha.com</a></p>
+          <p class="ga-desc-link"><a href="http://www.cantornatasha.com" target="_blank">www.cantornatasha.com</a></p>
         </div>
-        <div class="ga-sample">
-          <div class="ga-sample-image">
-              <p class="placeholder">Cantor Natasha Hirschhorn's video will be available with the full album release</p>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+          <img class="ga-img-full" src="images/guestartists/samplevideothumbs/NatashaPlaceholder.jpg"/>
+          <p class="ga-sample-img-title">Video clip will be available upon full album release</p>
+        </div>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title">
+            <b>Song of the Sabbath</b>
+            <p><span class="ezra">דאָס געזאַנג פוּן שבּת</span>
+              <br>(Dos Gezang fon Shabes)
+              <br>
+              <br>(CD track 13)
+            </p>
           </div>
-          <div class="ga-sample-description">
-            <p><b>"Sabbath"</b> (CD track 13) <br>
-            <i><b>Source:</b></i> Das Gezang fon Shabes (Song of the Sabbath), poem by Kadia Molodowsky<br>
-            <i><b>Composer:</b></i> Norma Brooks<br>
-            <i><b>Yiddish Translation:</b></i> Jean Valentine (jeanvalentine.com)<br>
-            <i><b>Arranger, Producer:</b></i> Cantor Natasha J. Hirschhorn<br>
-            <i><b>Vocal:</b></i> Cantor Natasha J. Hirschhorn, Vanessa R. Williams<br>
-            <i><b>Piano:</b></i> Cantor Natasha J. Hirschhorn</p>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">poem by Kadia Molodowsky</div>
           </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composer:</b></div>
+            <div class="ga-credit-list">Norma Brooks</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Yiddish Translation:</b></div>
+            <div class="ga-credit-list">Jean Valentine</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Arranger, Producer:</b></div>
+            <div class="ga-credit-list">Cantor Natasha J. Hirschhorn</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloists:</b></div>
+            <div class="ga-credit-list">Cantor Natasha J. Hirschhorn,<br>Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Piano:</b></div>
+            <div class="ga-credit-list">Cantor Natasha J. Hirschhorn</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <br>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>SOUNDCLIP: "Dos Gezang fon Shabes"</b></div>
+            <div class="ga-credit-list">(full song 4:34)</div>
+          </div>
+          <audio controls>
+            <source src="audio/natashasabathdemo.mp3"/>
+            Your browser does not support HTML5 audio.
+          </audio>
+          <div class="purchase">(The full song will be available Nov. 22, 2016)</div>
+        </div>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+        </div>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title">
+            <b>Torat Adonai</b>
+            <p><span class="ezra">תּוֹרַת ה' תְּמִימָה</span>
+              <br>(The Torah of the One)
+            </p>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">Psalm 19</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composer:</b></div>
+            <div class="ga-credit-list">Norma Brooks</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Arranger, Producer:</b></div>
+            <div class="ga-credit-list">Cantor Natasha J. Hirschhorn</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Soloist:</b></div>
+            <div class="ga-credit-list">Cantor Natasha J. Hirschhorn</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Piano:</b></div>
+            <div class="ga-credit-list">Cantor Natasha J. Hirschhorn</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <br>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>SOUNDCLIP: "Torat Adonai"</b></div>
+            <div class="ga-credit-list">(full song 3:05)</div>
+          </div>
+          <audio controls>
+            <source src="audio/natashatoratadonaidemo.mp3"/>
+            Your browser does not support HTML5 audio.
+          </audio>
+          <div class="purchase">(The full song will be available Nov. 22, 2016)</div>
         </div>
       </div>
     </div>
