--- a/gregboyer.html
+++ b/gregboyer.html
@@ -12,28 +12,45 @@
         <label class="menu-ham" for="menu-toggle">MENU</label>
         <input type="checkbox" id="menu-toggle"/>
         <ul class="mobile-menu">
-          <li>HOME</li>
-          <li>ABOUT</li>
+          <li><a href="home.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
           <li>GUEST ARTISTS</li>
-          <li>MUSIC</li>
-          <li>CONTACT</li>
+            <ul class="mobile-guest-artist-nav">
+              <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+              <li><a href="gregboyer.html">Greg Boyer</a></li>
+              <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+              <li><a href="lena.html">Lena Seikaly</a></li>
+              <li><a href="ramon.html">Ramón Tasat</a></li>
+            </ul>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <ul class="web-nav">
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>GUEST ARTISTS</li>
-        <li>MUSIC</li>
-        <li>CONTACT</li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li>
+          <label class="web-nav-ga" for="guest-artist-toggle">GUEST ARTISTS</label>
+          <input type="checkbox" id="guest-artist-toggle"/>
+          <ul class="web-guest-artist-nav">
+            <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+            <li><a href="gregboyer.html">Greg Boyer</a></li>
+            <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+            <li><a href="lena.html">Lena Seikaly</a></li>
+            <li><a href="ramon.html">Ramón Tasat</a></li>
+          </ul>
+        </li>
+        <li><a href="music.html">MUSIC</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="icon-bar">
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.facebook.com/PsalmFullOfSoul">
           <img src="images/pfos-facebook.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.youtube.com/channel/UCwpePpuyrd6SdrKXTByOu9w">
           <img src="images/pfos-youtube.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://twitter.com/PsalmFullOfSoul">
           <img src="images/pfos-twitter.png"/>
         </a>
       </div>
@@ -45,55 +62,227 @@
       <h2>GUEST ARTISTS</h2>
     </div>
     <div class="ga-container">
-      <div class="ga-panel">
+      <div class="ga-info-panel">
         <div class="ga-image">
-          <img class="ga-img-small" src="images/guestartists/gregboyer.jpg"/>
+          <img class="ga-img-full" src="images/guestartists/gregboyer.jpg"/>
         </div>
         <div class="ga-desc-container">
           <h5 class="ga-name">
             GREG BOYER
           </h5>
           <p class="ga-description">
-            Best known as the trombonist for George Clinton's Parliament Funkadelic, Greg Boyer has performed with a wide array of R&B and funk groups including Prince's NPG, Chuck Brown, Bootsy Collins, Eric Benét, Hank Williams Jr., Eryka Badu, Lalah Hathaway, Alex Bugnon, David Sanborn, Fantasia and others. His TV appearances include Late Night with David Letterman, the Tonight show, Soul Train Awards, and BET on Jazz. Greg brings a soulful sensitivity to the Psalm Full of Soul project with his legendary sound and stylistically diverse music.
+            Best known as the trombonist for George Clinton's Parliament Funkadelic, Greg Boyer has performed with a wide array of R&B and funk groups including Prince's NPG, Chuck Brown, Bootsy Collins, Eric Benét, Hank Williams Jr., Eryka Badu, Lalah Hathaway, Alex Bugnon, David Sanborn, Fantasia and others. His TV appearances include <i>Late Night with David Letterman, The Tonight Show, Soul Train Awards,</i> and <i>BET on Jazz</i>. Greg brings a soulful sensitivity to the <i>Psalm Full of Soul</i> project with his legendary sound and stylistically diverse music.
           </p>
           <p class="ga-desc-link"><a href="http://www.gregboyer.net/" target="_blank">www.gregboyer.net</a></p>
         </div>
-        <div class="ga-sample">
-          <div class="ga-sample-image">
-              <img src="images/GB1VideoPlayButton.jpg"/>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+          <div class="ga-sample-video-container">
+            <iframe src="https://www.youtube.com/embed/pQfEVzmjl2g?rel=0" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div class="ga-sample-description">
-            <p><b>VIEW VIDEO CLIP: "Jerusalem, Wake to Peace"</b> (CD track 1) <br>
-            <i><b>Source:</b></i> Psalm 122<br>
-            <i><b>Composer:</b></i> Norma Brooks<br>
-            <i><b>Producer, Engineer, Arranger:</b></i> Vince Evans<br>
-            <i><b>Vocal Arranger:</b></i> Vanessa R. Williams <br>
-            <i><b>Vocal Soloist:</b></i> Norma Brooks, Lena Seikaly, Vanessa R. Williams<br>
-            <i><b>Spoken Word:</b></i> Desmond Lowe<br>
-            <i><b>Choir:</b></i> Norma Brooks, Vanessa R. Williams<br>
-            <i><b>Keyboards:</b></i> Vince Evans <br>
-            <i><b>Trumpet:</b></i> Brad Clements<br>
-            <i><b>Saxophone:</b></i> Elijah Jamal Balbed<br>
-            <i><b>Trombone:</b></i> Greg Boyer<br>
-            <i><b>Drums:</b></i> Mark Prince<br>
-            <i><b>Bass:</b></i> Dave Dyson<br>
-            <i><b>Guitar:</b></i> Alvin White</p>
-          </div>
+          <p class="ga-sample-img-title"><b>VIEW VIDEO CLIP:<br>"Jerusalem, Wake to Peace"</b><br>(CD track 1)</p>
         </div>
-        <div class="ga-sample">
-          <div class="ga-sample-image">
-              <img src="images/GB2VideoPlayButton.jpg"/>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title"><b>Jerusalem, Wake to Peace</b>
+            <p><span class="ezra">שַֽׁאֲלוּ שְׁלוֹם יְרֽוּשָׁלָים</span>
+            <br>(Sha-a-lu sh’lom Yerushalayim)
+            <br><span class="ezra">اسْألُوا سَلَامَةَ أُورُشَلِیمَ</span>
+            <br>(Isʾalū salāmata Ūrushalīma)
+            <br>
+            <br>(CD track 1)</p>
           </div>
-          <div class="ga-sample-description">
-            <p><b>VIEW VIDEO CLIP: "Singing Your Praise"</b> (CD track 7) <br>
-            <i><b>Source:</b></i> Psalm 51<br>
-            <i><b>Composers:</b></i> Norma Brooks and Vince Evans<br>
-            <i><b>Producer, Engineer, Arranger:</b></i> Vince Evans<br>
-            <i><b>Vocals:</b></i> Vanessa R. Williams <br>
-            <i><b>Keyboards:</b></i> Vince Evans<br>
-            <i><b>Bass:</b></i> Herman Burney<br>
-            <i><b>Drums:</b></i> J.C. Jefferson, Jr.</p>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">Psalm 122</div>
           </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composer:</b></div>
+            <div class="ga-credit-list">Norma Brooks</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Producer, Arranger:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Arranger:</b></div>
+            <div class="ga-credit-list">Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloists:</b></div>
+            <div class="ga-credit-list">Norma Brooks,<br>Lena Seikaly,<br>Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Spoken Word:</b></div>
+            <div class="ga-credit-list">Desmond Lowe</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Choir:</b></div>
+            <div class="ga-credit-list">Norma Brooks,<br>Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Keyboards:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Trumpet:</b></div>
+            <div class="ga-credit-list">Brad Clements</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Saxophone:</b></div>
+            <div class="ga-credit-list">Elijah Jamal Balbed</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Trombone:</b></div>
+            <div class="ga-credit-list">Greg Boyer</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Bass:</b></div>
+            <div class="ga-credit-list">Dave Dyson</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Guitar:</b></div>
+            <div class="ga-credit-list">Alvin White</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Drums:</b></div>
+            <div class="ga-credit-list">Mark Prince</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Recording Engineer:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <div class="purchase">(The full song will be available Nov. 22, 2016)</div>
+        </div>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+          <div class="ga-sample-video-container">
+            <iframe src="https://www.youtube.com/embed/piDMA1yIzf4?rel=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <p class="ga-sample-img-title"><b>VIEW VIDEO CLIP:<br>"Singing Your Praise"</b><br>(CD track 7)</p>
+        </div>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title">
+            <b>Singing Your Praise</b>
+            <p><span class="ezra">ה' שְׂפָתַי תִּפְתָּח</span>
+            <br>(Adonai S’fatai Tiftaḥ)
+            <br>
+            <br>(CD track 7)</p>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">Psalm 51</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composers:</b></div>
+            <div class="ga-credit-list">Norma Brooks, Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Producer, Arranger:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloist:</b></div>
+            <div class="ga-credit-list">Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Keyboards:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Trombone:</b></div>
+            <div class="ga-credit-list">Greg Boyer</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Bass:</b></div>
+            <div class="ga-credit-list">Herman Burney</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Drums:</b></div>
+            <div class="ga-credit-list">J.C. Jefferson, Jr.</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Recording Engineer:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <div class="purchase">(The full song will be available Nov. 22, 2016)</div>
+        </div>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+        </div>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title">
+            <b>Rebuilding Jerusalem -
+            <br>Healing the Broken Heart</b>
+            <p><span class="ezra">בּוֹנֵה יְרֽוּשָׁלָים ה'</span>
+              <br>(Boneh Yerushalayim Adonai)
+              <br>
+              <br>(CD track 5)
+            </p>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">Psalm 147</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composers:</b></div>
+            <div class="ga-credit-list">Norma Brooks, Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Producer, Arranger:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloists:</b></div>
+            <div class="ga-credit-list">Norma Brooks,<br>Vince Evans,<br>Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Keyboards:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Guitar:</b></div>
+            <div class="ga-credit-list">Alvin White</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Bass:</b></div>
+            <div class="ga-credit-list">Mark A. Walker</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Trombone Choir:</b></div>
+            <div class="ga-credit-list">Greg Boyer</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Drums:</b></div>
+            <div class="ga-credit-list">Judge Williams, Jr.</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Recording Engineer:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <br>
+          <div class="ga-credits">
+            <b>SOUNDCLIP: "Rebuilding Jerusalem -<br>Healing the Broken Heart"</b>
+          </div>
+          <audio controls>
+            <source src="audio/boyerrebuildingjerusalem.mp3"/>
+            Your browser does not support HTML5 audio.
+          </audio>
+          <div class="purchase">(Full song available for purchase at <a href="Music.html">Music</a>)</div>
         </div>
       </div>
     </div>
