--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <img id="background" src="images/landing/bg-image.jpg"/>
+    </div>
+    <div class="button-container">
       <a href="home.html" class="button">
         <p>ENTER SITE</p>
       </a>
