--- a/lena.html
+++ b/lena.html
@@ -12,28 +12,45 @@
         <label class="menu-ham" for="menu-toggle">MENU</label>
         <input type="checkbox" id="menu-toggle"/>
         <ul class="mobile-menu">
-          <li>HOME</li>
-          <li>ABOUT</li>
+          <li><a href="home.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
           <li>GUEST ARTISTS</li>
-          <li>MUSIC</li>
-          <li>CONTACT</li>
+            <ul class="mobile-guest-artist-nav">
+              <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+              <li><a href="gregboyer.html">Greg Boyer</a></li>
+              <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+              <li><a href="lena.html">Lena Seikaly</a></li>
+              <li><a href="ramon.html">Ramón Tasat</a></li>
+            </ul>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <ul class="web-nav">
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>GUEST ARTISTS</li>
-        <li>MUSIC</li>
-        <li>CONTACT</li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li>
+          <label class="web-nav-ga" for="guest-artist-toggle">GUEST ARTISTS</label>
+          <input type="checkbox" id="guest-artist-toggle"/>
+          <ul class="web-guest-artist-nav">
+            <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+            <li><a href="gregboyer.html">Greg Boyer</a></li>
+            <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+            <li><a href="lena.html">Lena Seikaly</a></li>
+            <li><a href="ramon.html">Ramón Tasat</a></li>
+          </ul>
+        </li>
+        <li><a href="music.html">MUSIC</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="icon-bar">
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.facebook.com/PsalmFullOfSoul">
           <img src="images/pfos-facebook.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.youtube.com/channel/UCwpePpuyrd6SdrKXTByOu9w">
           <img src="images/pfos-youtube.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://twitter.com/PsalmFullOfSoul">
           <img src="images/pfos-twitter.png"/>
         </a>
       </div>
@@ -45,59 +62,165 @@
       <h2>GUEST ARTISTS</h2>
     </div>
     <div class="ga-container">
-      <div class="ga-panel">
+      <div class="ga-info-panel">
         <div class="ga-image">
-          <img class="ga-img-small" src="images/guestartists/lena.jpg"/>
+          <img class="ga-img-full" src="images/guestartists/lena.jpg"/>
         </div>
         <div class="ga-desc-container">
           <h5 class="ga-name">
             LENA SEIKALY
           </h5>
           <p class="ga-description">
-            The Washington Post calls jazz vocalist Lena Seikaly one of the "brightest voices in jazz." This rising star was one of the semifinalists in the Thelonious Monk Institute International Jazz Vocals Competition. Alongside the Hebrew and English, Lena joins Psalm Full of Soul in Arabic on two psalms that yearn for peace in Jerusalem: "Jerusalem, Wake to Peace" (Psalm 122) and "Rebuilding Jerusalem_Healing the Broken Heart" (Psalm 147).
+            The Washington Post calls jazz vocalist Lena Seikaly one of the "brightest voices in jazz." This rising star was one of the semifinalists in the Thelonious Monk Institute International Jazz Vocals Competition. Alongside the Hebrew and English, Lena joins <i>Psalm Full of Soul</i> in Arabic on two psalms that yearn for peace in Jerusalem: "Jerusalem, Wake to Peace" (Psalm 122) and "Rebuilding Jerusalem - Healing the Broken Heart" (Psalm 147).
           </p>
-          <p class="ga-desc-link"><a href="http://www.lenaseikaly.com/" target="_blank">www.lenaseikaly.com</a></p>
+          <p class="ga-desc-link"><a href="http://www.lenaseikaly.com" target="_blank">www.lenaseikaly.com</a></p>
         </div>
-        <div class="ga-sample">
-          <div class="ga-sample-image">
-            <p class="placeholder">
-              Lena Seikaly's video will be available with the full album release
-            </p>
-          </div>
-          <div class="ga-sample-description">
-            <p><b>VIEW VIDEO CLIP: "Jerusalem, Wake to Peace"</b> (CD track 1) <br>
-            <i><b>Source:</b></i> Psalm 122<br>
-            <i><b>Composer:</b></i> Norma Brooks<br>
-            <i><b>Producer, Engineer, Arranger:</b></i> Vince Evans<br>
-            <i><b>Vocal Arranger:</b></i> Vanessa R. Williams <br>
-            <i><b>Vocal Soloist:</b></i> Norma Brooks, Lena Seikaly, Vanessa R. Williams<br>
-            <i><b>Spoken Word:</b></i> Desmond Lowe<br>
-            <i><b>Choir:</b></i> Norma Brooks, Vanessa R. Williams<br>
-            <i><b>Keyboards:</b></i> Vince Evans <br>
-            <i><b>Trumpet:</b></i> Brad Clements<br>
-            <i><b>Saxophone:</b></i> Elijah Jamal Balbed<br>
-            <i><b>Trombone:</b></i> Greg Boyer<br>
-            <i><b>Drums:</b></i> Mark Prince<br>
-            <i><b>Bass:</b></i> Dave Dyson<br>
-            <i><b>Guitar:</b></i> Alvin White</p>
-          </div>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+          <img class="ga-img-full" src="images/guestartists/samplevideothumbs/LenaPlaceholder.jpg"/>
+          <p class="ga-sample-img-title">Video clip will be available upon full album release</p>
         </div>
-        <div class="ga-sample">
-          <div class="ga-sample-image">
-            <p class="placeholder">
-              Lena Seikaly's video will be available with the full album release
-            </p>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title"><b>Jerusalem, Wake to Peace</b>
+            <p><span class="ezra">שַֽׁאֲלוּ שְׁלוֹם יְרֽוּשָׁלָים</span>
+            <br>(Sha-a-lu sh’lom Yerushalayim)
+            <br><span class="ezra">اسْألُوا سَلَامَةَ أُورُشَلِیمَ</span>
+            <br>(Isʾalū salāmata Ūrushalīma)
+            <br>(CD track 1)</p>
           </div>
-          <div class="ga-sample-description">
-            <p><b>"Rebuilding Jerusalem_Healing the Broken Heart"</b> (CD track 5) <br>
-            <i><b>Source:</b></i> Psalm 147<br>
-            <i><b>Composer:</b></i> Norma Brooks and Vince Evans<br>
-            <i><b>Producer, Engineer, Arranger:</b></i> Vince Evans<br>
-            <i><b>Vocals:</b></i> Norma Brooks, Vince Evans, Vanessa R. Williams<br>
-            <i><b>Keyboards:</b></i> Vince Evans<br>
-            <i><b>Guitar:</b></i> Alvin White<br>
-            <i><b>Bass:</b></i> Mark A. Walker<br>
-            <i><b>Drums:</b></i> Judge Williams, Jr.</p>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">Psalm 122</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composer:</b></div>
+            <div class="ga-credit-list">Norma Brooks</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Producer, Arranger:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Arranger:</b></div>
+            <div class="ga-credit-list">Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloists:</b></div>
+            <div class="ga-credit-list">Norma Brooks,<br>Lena Seikaly,<br>Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Spoken Word:</b></div>
+            <div class="ga-credit-list">Desmond Lowe</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Choir:</b></div>
+            <div class="ga-credit-list">Norma Brooks,<br>Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Keyboards:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Trumpet:</b></div>
+            <div class="ga-credit-list">Brad Clements</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Saxophone:</b></div>
+            <div class="ga-credit-list">Elijah Jamal Balbed</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Trombone:</b></div>
+            <div class="ga-credit-list">Greg Boyer</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Bass:</b></div>
+            <div class="ga-credit-list">Dave Dyson</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Guitar:</b></div>
+            <div class="ga-credit-list">Alvin White</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Drums:</b></div>
+            <div class="ga-credit-list">Mark Prince</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Recording Engineer:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <br>
+          <div class="ga-credits">
+            <p><b>SOUNDCLIP: "Jerusalem, Wake to Peace"</b>
+            (full song 3:05)</p>
+          </div>
+          <audio controls>
+            <source src="audio/lenajerusalemdemo.mp3"/>
+            Your browser does not support HTML5 audio.
+          </audio>
+          <div class="purchase">(The full song will be available Nov. 22, 2016)</div>
+        </div>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+        </div>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title">
+            <b>Intro to Rebuilding Jerusalem - <br>
+            Healing the Broken Heart</b>
+              <p><span class="ezra">الرَّبُّ یَبْنِي أُورُشَلِیمَ</span>
+                <br>(Al-rabbu yabnī Ūrushalīma)
+                <br>
+                <br>(CD track 4)
+              </p>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">Psalm 147</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composers:</b></div>
+            <div class="ga-credit-list">Norma Brooks, Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Producer, Arranger:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloist:</b></div>
+            <div class="ga-credit-list">Lena Seikaly</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Keyboards:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Recording Engineer:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <br>
+          <div class="ga-credits">
+            <p><b>SOUNDCLIP: "Intro to Rebuilding Jerusalem -
+            <br>Healing the Broken Heart"</b>
+            (full song 1:32)</p>
+          </div>
+          <audio controls>
+            <source src="audio/lenarebuildingdemo.mp3"/>
+            Your browser does not support HTML5 audio.
+          </audio>
+          <div class="purchase">(The full song will be available Nov. 22, 2016)</div>
+          <br>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Arabic Text:</b></div>
+            <div class="ga-credit-list">Dr. Cory Jorgensen, Assistant Professor of Arabic, George Washington University</div>
           </div>
         </div>
       </div>
