--- a/ramon.html
+++ b/ramon.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>Psalm Full of Soul</title>
     <link href='css/guestartists.css' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="images/PFOS_Favicon2.jpg"/>
   </head>
   <body>
     <div class="menu-bar">
@@ -12,28 +13,45 @@
         <label class="menu-ham" for="menu-toggle">MENU</label>
         <input type="checkbox" id="menu-toggle"/>
         <ul class="mobile-menu">
-          <li>HOME</li>
-          <li>ABOUT</li>
+          <li><a href="home.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
           <li>GUEST ARTISTS</li>
-          <li>MUSIC</li>
-          <li>CONTACT</li>
+            <ul class="mobile-guest-artist-nav">
+              <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+              <li><a href="gregboyer.html">Greg Boyer</a></li>
+              <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+              <li><a href="lena.html">Lena Seikaly</a></li>
+              <li><a href="ramon.html">Ramón Tasat</a></li>
+            </ul>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <ul class="web-nav">
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>GUEST ARTISTS</li>
-        <li>MUSIC</li>
-        <li>CONTACT</li>
+        <li><a href="home.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li>
+          <label class="web-nav-ga" for="guest-artist-toggle">GUEST ARTISTS</label>
+          <input type="checkbox" id="guest-artist-toggle"/>
+          <ul class="web-guest-artist-nav">
+            <li><a href="bboa.html">The Blind Boys of Alabama</a></li>
+            <li><a href="gregboyer.html">Greg Boyer</a></li>
+            <li><a href="natasha.html">Natasha Hirschhorn</a></li>
+            <li><a href="lena.html">Lena Seikaly</a></li>
+            <li><a href="ramon.html">Ramón Tasat</a></li>
+          </ul>
+        </li>
+        <li><a href="music.html">MUSIC</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="icon-bar">
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.facebook.com/PsalmFullOfSoul">
           <img src="images/pfos-facebook.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://www.youtube.com/channel/UCwpePpuyrd6SdrKXTByOu9w">
           <img src="images/pfos-youtube.png"/>
         </a>
-        <a class="hvr-grow" href="">
+        <a class="hvr-grow" href="https://twitter.com/PsalmFullOfSoul">
           <img src="images/pfos-twitter.png"/>
         </a>
       </div>
@@ -45,33 +63,146 @@
       <h2>GUEST ARTISTS</h2>
     </div>
     <div class="ga-container">
-      <div class="ga-panel">
+      <div class="ga-info-panel">
         <div class="ga-image">
-          <img class="ga-img-small" src="images/guestartists/ramon.jpg"/>
+          <img class="ga-img-full" src="images/guestartists/ramon.jpg"/>
         </div>
         <div class="ga-desc-container">
           <h5 class="ga-name">
             CANTOR RAMÓN TASAT
           </h5>
           <p class="ga-description">
-            Cantor Dr. Ramón Tasat, an award-winning, internationally renowned vocalist and musicologist, is a scholar and performer of Sephardic Jewish music. He is a composer, arranger, and musical director of Kolot HaLev, a Washington area choir, and is Cantor of Congregation Shirat HaNefesh in Maryland. Originally from Argentina, Cantor Tasat has performed around the world and serves as president of Shalshelet (shalshelet.org). In Psalm Full of Soul, he joins Vanessa R. Williams in a deeply moving prayer from the Jewish liturgy, "And It Was So" (Barukh She-amar).
+            Cantor Dr. Ramón Tasat, an award-winning, internationally renowned vocalist and musicologist, is a scholar and performer of Sephardic Jewish music. He is a composer, arranger, and musical director of Kolot HaLev, a Washington area choir, and is Cantor of Congregation Shirat HaNefesh in Maryland. Originally from Argentina, Cantor Tasat has performed around the world and serves as president of <a href="http://shalshelet.org/">Shalshelet</a>. In <i>Psalm Full of Soul</i>, he joins Vanessa R. Williams in a deeply moving prayer from the Jewish liturgy, "And It Was So" (Barukh She-amar).
           </p>
           <p class="ga-desc-link"><a href="http://www.ramontasat.com/" target="_blank">www.ramontasat.com</a></p>
         </div>
-        <div class="ga-sample">
-          <div class="ga-sample-image">
-              <p class="placeholder">Video to come</p>
+      </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+          <video width="100%" controls>
+            <source src="VIDEOS/AndItWasSo-RamonTasat.mp4" type="video/mp4">
+              our browser does not support the video tag.
+          </video>
+          <p class="ga-sample-img-title"><b>VIEW VIDEO CLIP:<br>"And It Was So"</b><br>(CD track 10)</p>
+        </div>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title">
+            <b>And It Was So</b>
+            <p><span class="ezra">בָּרוּךְ שֶׁאָמַר</span>
+              <br>(Barukh She-amar)
+              <br>
+              <br>(CD track 10)
+            </p>
           </div>
-          <div class="ga-sample-description">
-            <p><b>"And It Was So"</b> (CD track 10) <br>
-            <i><b>Source:</b></i> <i>Barukh She-amar</i> in Jewish liturgy<br>
-            <i><b>Composer:</b></i> Norma Brooks<br>
-            <i><b>Producer, Engineer, Arranger:</b></i> Vince Evans<br>
-            <i><b>Vocal Arranger:</b></i> Vanessa R. Williams<br>
-            <i><b>Vocal soloists:</b></i> Hazzan Dr. Ramón Tasat, Vanessa R. Williams<br>
-            <i><b>Keyboards:</b></i> Vince Evans<br>
-            <i><b>Cello:</b></i> Tanya Anisimova (tanyaanisimova.com)<br>
-            <i><b>Cello Arranger:</b></i> Steve Cohen</p>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">From the Jewish liturgy</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composer:</b></div>
+            <div class="ga-credit-list">Norma Brooks</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Producer, Arranger:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloists:</b></div>
+            <div class="ga-credit-list">Cantor Ramón Tasat,<br>Vanessa R. Williams</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Keyboards:</b></div>
+            <div class="ga-credit-list">Vince Evans</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Cello:</b></div>
+            <div class="ga-credit-list">Tanya Anisimova</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Cello Arranger:</b></div>
+            <div class="ga-credit-list">Steve Cohen</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <br>
+          <div class="ga-credits">
+            <p>
+              <b>SOUNDCLIP: "And It Was So"</b>
+              <br>(full song 4:41)
+            </p>
+          </div>
+          <audio controls>
+            <source src="audio/anditwassoguest.mp3"/>
+            Your browser does not support HTML5 audio.
+          </audio>
+          <div class="purchase">(Full song available for purchase at <a href="music.html">Music</a>)</div>
+          </div>
+        </div>
+      <div class="ga-sample-panel">
+        <div class="ga-sample-image">
+        </div>
+        <div class="ga-sample-description">
+          <div class="ga-sample-title">
+            <b>El Maleh Raḥamim</b>
+            <p><span class="ezra">אֵל מָלֵא רַחֲמִים</span>
+              <br>(Prayer for the Departed)
+            </p>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Source:</b></div>
+            <div class="ga-credit-list">From the Jewish liturgy</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Composer:</b></div>
+            <div class="ga-credit-list">Norma Brooks</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Vocal Soloist:</b></div>
+            <div class="ga-credit-list">Cantor Ramón Tasat</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Recording Studio:</b></div>
+            <div class="ga-credit-list">InTune Recording</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Recording Engineer:</b></div>
+            <div class="ga-credit-list">Dani Cortaza</div>
+          </div>
+          <div class="ga-credits">
+            <div class="ga-credit-name"><b>Mixing & Mastering:</b></div>
+            <div class="ga-credit-list">Bill Wolf</div>
+          </div>
+          <br>
+          <div class="ga-credits">
+            <p>
+              <b>SOUNDCLIP: "El Maleh Raḥamim"</b>
+              <br>(full song 2:46)
+            </p>
+          </div>
+          <audio controls>
+            <source src="audio/ramonelmalehrahamim.mp3"/>
+            Your browser does not support HTML5 audio.
+          </audio>
+          <div class="purchase"><b>PURCHASE SONG NOW</b><br>
+          <br>
+            El Maleh Rahamim - MP3 .99<br>
+            <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="GM8QSH6FD4ZQW">
+              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+              <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+            <br>
+            El Maleh Ramamim - WAV 1.50<br>
+            <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="UZ2ME9HHEEHTC">
+              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+              <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+            <br>
           </div>
         </div>
       </div>
